# internals/deliveries/candidate_routes/candidate_handler.go
@@ -9,6 +9,8 @@ import (
 	"github.com/dgrijalva/jwt-go"
 	"log"
 	"net/http"
+	"strconv"
+	"strings"
 )
 
 type CandidateHandler struct {
@@ -39,12 +41,81 @@ func (h *CandidateHandler) GetAll(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	candidates, err := h.UseCase.GetAllByType(typ)
+	limitStr := r.URL.Query().Get("limit")
+	offsetStr := r.URL.Query().Get("offset")
+
+	limit, err := strconv.Atoi(limitStr)
+	if err != nil || limit <= 0 {
+		limit = 10
+	}
+	offset, err := strconv.Atoi(offsetStr)
+	if err != nil || offset < 0 {
+		offset = 0
+	}
+
+	candidates, err := h.UseCase.GetAllByTypePaginated(typ, limit, offset)
 	if err != nil {
 		http.Error(w, "failed to get candidates", http.StatusInternalServerError)
 		return
 	}
 
+	json.NewEncoder(w).Encode(candidates)
+}
+
+// @Summary Get candidates by type by page
+// @Tags Candidates
+// @Produce json
+// @Param type query string true "Candidate Type"
+// @Security BearerAuth
+// @Success 200 {array} candidate_data.Candidate "List of candidates"
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /candidates/ [get]
+func (h *CandidateHandler) GetCandidatesByPage(w http.ResponseWriter, r *http.Request) {
+	// Get 'type' query parameter
+	typ := r.URL.Query().Get("type")
+	if typ == "" {
+		http.Error(w, "type is required", http.StatusBadRequest)
+		return
+	}
+
+	// Split the URL to get the page number
+	path := r.URL.Path // example: /candidates/1
+	parts := strings.Split(path, "/")
+	if len(parts) < 3 {
+		http.Error(w, "Page number required", http.StatusBadRequest)
+		return
+	}
+
+	pageStr := parts[len(parts)-1] // Get the last part which is the page number
+	page, err := strconv.Atoi(pageStr)
+	if err != nil || page <= 0 {
+		http.Error(w, "Invalid page number", http.StatusBadRequest)
+		return
+	}
+
+	// Optionally, get 'limit' from query params, else default to 10
+	limitStr := r.URL.Query().Get("limit")
+	limit := 10 // default value
+	if limitStr != "" {
+		limit, err = strconv.Atoi(limitStr)
+		if err != nil || limit <= 0 {
+			http.Error(w, "Invalid limit", http.StatusBadRequest)
+			return
+		}
+	}
+
+	// Calculate offset for pagination
+	offset := (page - 1) * limit
+
+	// Get candidates using the paginated use case method
+	candidates, err := h.UseCase.GetAllByTypePaginated(typ, limit, offset)
+	if err != nil {
+		http.Error(w, "Failed to get candidates", http.StatusInternalServerError)
+		return
+	}
+
+	// Return the candidates
 	json.NewEncoder(w).Encode(candidates)
 }
 
